--- a/customPublic/src/styles/index.less
+++ b/customPublic/src/styles/index.less
@@ -122,6 +122,7 @@ page{
     flex: 1;
     display: flex;
     overflow: hidden;
+    height:100vh;
     .menu-title-list{
         width: 174rpx;
         background: #F9F9F9;
@@ -171,6 +172,10 @@ page{
     height: 90rpx;
     background: #F0F0F0;
     display: flex;
+    width: 750rpx;
+    position: fixed;
+    bottom: 9rpx;
+    left: 0;
     .cat{
         flex: 1;
         display: flex;
