--- a/customPublic/src/styles/index.less
+++ b/customPublic/src/styles/index.less
@@ -161,7 +161,61 @@ page{
                 >view{
                     flex: 1;
                     display: flex;
+                }
+                .menu-title{
+                    height: 79rpx;
                     align-items: center;
+
+                }
+                .control{
+                    display: flex;
+                    height: 79rpx;
+                   align-items: flex-end;
+
+                    >view{
+                        flex: 1;
+                        display: flex;
+                        height: 79rpx;
+                        align-items: center;
+                        &:first-child{
+                            >view{
+                                height: 79rpx;
+                            
+                                &:first-child{
+                                    font-size:38rpx;
+                                    height: 100%;
+                                    font-weight:500;
+                                    color:rgba(102,198,147,1);
+                                    display: flex;
+                                    align-items: center;
+                                }
+                                &:last-child{
+                                    font-size:22rpx;
+                                    font-weight:500;
+                                    color:rgba(51,51,51,1);
+                                    display: flex;
+                                    align-items: center;
+                                }
+                            }
+                        }
+                        &:last-child{
+                            height: 79rpx;
+                            align-items: center;
+                            display: flex;
+                            i{
+                                font-size: 36rpx;
+                                &.icon-jian-copy{
+                                    color: #999999;
+                                }
+                                &.icon-jia1{
+                                    color: #66C693;
+                                }
+                            }
+                            >view{
+                                margin:0 20rpx;
+                            }
+                        }
+                    }
                 }
             }
         }
@@ -174,13 +228,101 @@ page{
     display: flex;
     width: 750rpx;
     position: fixed;
-    bottom: 9rpx;
+    bottom: 0rpx;
     left: 0;
+
+   
     .cat{
+        position: relative;
         flex: 1;
         display: flex;
         align-items: center;
-        >view{
+        .select-menu{
+
+            width: 750rpx;
+            position: absolute;
+            top:-2000rpx;
+            height: 2000rpx;
+            background: rgba(3,0,0,.3);
+            .menu-cart{
+                height: 100%;
+                width:100%;
+                position: relative;
+                .menu-cart-box{
+                    position: absolute;
+                    bottom: 0;
+                    width: 750rpx;
+                    background: #fff;
+                    .title{
+                        height: 80rpx;
+                        width: 100%;
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-between;
+                        height: 80rpx;
+                        background: rgba(245,245,245,1);
+                       
+                        color:rgba(153,153,153,1);
+                        view{
+                            &:first-child{
+                                margin-left:20rpx;
+                            }
+                            &:last-child{
+                                display: flex;
+                                align-items: center;
+                                font-size: 22rpx;
+                                margin-right: 10rpx;
+                                i{
+                                    font-size: 26rpx;
+                                    margin-right: 10rpx;
+                                }
+                            }
+                        }
+                    }
+                    .menu-cart-list{
+                        background: #fff;
+                        height: 90rpx;
+                        display: flex;
+                        align-items: center;
+                        width: 710rpx;
+                        margin:0 20rpx;
+                        border-bottom: 1rpx solid rgba(229,229,229,1);
+                        view{
+                            &:first-child{
+                                width: 250rpx;
+                                font-size:28rpx;
+                                font-weight:500;
+                                color:rgba(51,51,51,1);
+                            }
+                            &:nth-child(2){
+                                flex: 1;
+                                font-size:26rpx;
+                                font-weight:500;
+                                color:rgba(114,201,155,1);
+                            }
+                            &:last-child{
+                                display: flex;
+                                view{
+                                    margin:0 20rpx;
+                                    color:rgba(51,51,51,1);
+                                }
+                                i{
+                                    font-size: 36rpx;
+                                    &.icon-jian-copy{
+                                        color: #999999;
+                                    }
+                                    
+                                    &.icon-jia1{
+                                        color: #66C693;
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .cart{
             height: 78rpx;
             width: 78rpx;
             background: #66C693;
